# LALR-1-CompilerTheory

./: .gitignore  LALR.cpp  LALR.h  LDLR.cpp  LDLR.h  README.md  algor.cpp  algor.h  file.bak  file.txt  globals.h  his.txt  production.cpp  production.h  read_t.cpp
his/: his.txt  his2.txt
projectlize/: CMakeLists.txt  analyseRecord.cpp  analyseRecord.h  file.txt  globals.cpp  globals.h  lalr.cpp  lalr.h  lalr.md  main.cpp  myalgor.cpp  myalgor.h  production.cpp  production.h  util.cpp  util.h
projectlize/RES/(A)/: res.txt
projectlize/RES/exp/: a-DFA.md  a.txt  b.txt
projectlize/RES/minic/: 测试语句.txt  看似正确实则错误的样例.txt
projectlize/TestFiles/: mini-c的所有语法.txt  tiny-fg-modify  tiny_wenfa-fg.txt
projectlize/generator/: joint_test.txt  tiny_joint.cpp
projectlize/matchTestFiles/: match(A)_content.txt  matchRe(A)_cont.txt  matchRe(A)_prod.txt  minic_cont.txt  null2_cont.txt  null2_prod.txt  null_prod.txt  tinyRe_cont.txt  tinyRe_prod.txt  tiny_cont.txt
projectlize/read/: tiny_yulian.txt
retry/: LALR.cpp  globals.cpp  main.cpp  pack.cpp  production.cpp  解释.txt
test/: file.bak  file.txt  main_t.cpp  test_cout.cpp
